<resources>
    <string name="app_name" translatable="false">S3 Manager</string>
    <string name="aws_endpoint" translatable="false">.amazonaws.com</string>
    <string name="endpoint_url" translatable="false">https://object.asgardius.company</string>
    <string name="pdf_reader" translatable="false">https://office.asgardius.company/pdfjs</string>
    <string name="pdf_reader_notready">You need to setup a pdf.js server</string>
    <string name="access_key" translatable="false">google</string>
    <string name="account_list">Account list</string>
    <string name="bucket_list">Bucket list</string>
    <string name="object_list">Object list</string>
    <string name="Image">Image</string>
    <string name="expiration_date">Expiration date</string>
    <string name="expiration_time">Expiration time</string>
    <string name="share_hour">HH</string>
    <string name="share_minute">MM</string>
    <string name="share_date">DD</string>
    <string name="share_month">MM</string>
    <string name="share_year">YYYY</string>
    <string name="create_link">Create file link</string>
    <string name="invalid_expiration_date">Expiration date must be at most 7 days</string>
    <string name="null_expiration_date">You must set an expiration date to share files</string>
    <string name="broken_database">Local database is corrupted. Please reinstall this app</string>
    <string name="pending_feature">This feature is not implemented yet</string>
    <string name="set_bucket_name">Set new bucket name</string>
    <string name="bucket_name">Bucket name</string>
    <string name="bucket_name_empty">A bucket name is required</string>
    <string name="file_share">Share file</string>
    <string name="file_external">Open in</string>
    <string name="download_file">Download file</string>
    <string name="cancel_download">Cancel download</string>
    <string name="download_success">File downloaded successfully</string>
    <string name="upload_file_tobucket">Upload file to this bucket</string>
    <string name="upload_folder_tobucket">Upload folder to this bucket</string>
    <string name="feature_not_supported">Your device is not compatible with this feature</string>
    <string name="file_path_fail">File uri not found</string>
    <string name="upload_button">Upload file</string>
    <string name="upload_prefix">Object prefix</string>
    <string name="no_file_selected">Please select a file</string>
    <string name="upload_success">File uploaded successfully</string>
    <string name="cancel_upload">Cancel Upload</string>
    <string name="retry">Retry</string>
    <string name="download_failed">Download failed</string>
    <string name="download_canceled">Download canceled</string>
    <string name="success">Success</string>
    <string name="object_info">Properties</string>
    <string name="file_size">File Size</string>
    <string name="folder_size">Folder Size</string>
    <string name="bucket_size">Bucket Size</string>
    <string name="file_count">Files</string>
    <string name="create_bucket">Create new bucket</string>
    <string name="create_bucket_success">Bucket created successfully</string>
    <string name="upload_file_here">Upload file in current folder</string>
    <string name="upload_folder_here">Upload folder in current folder</string>
    <string name="file_del">Delete</string>
    <string name="file_del_confirm">Do you want to delete this file?</string>
    <string name="folder_del_confirm">Do you want to delete this folder?</string>
    <string name="bucket_del_confirm">Do you want to delete this bucket?</string>
    <string name="bucket_del_success">Bucket deleted successfully</string>
    <string name="folder_del_success">Folder deleted successfully</string>
    <string name="file_del_success">File deleted successfully</string>
    <string name="only_item_onlist">This is the only item on this folder, you should delete the parent folder instead</string>
    <string name="accountselect">Please choose an account</string>
    <string name="accountadd_button">Add Account</string>
    <string name="accounttest_button">Test credentials</string>
    <string name="accounttest_success">Credentials are correct</string>
    <string name="accountadd_alias">Account Alias</string>
    <string name="accountadd_pdfendpoint">pdfjs server</string>
    <string name="accountadd_endpoint">S3 Endpoint URL</string>
    <string name="accountadd_region">S3 Region</string>
    <string name="accountadd_username">S3 Access Key</string>
    <string name="accountadd_password">S3 Secret Key</string>
    <string name="accountadd_success">Account added successfully</string>
    <string name="accountadd_fail">This alias is already in use</string>
    <string name="accountadd_null">All fields are required</string>
    <string name="accountdel_button">Remove Account</string>
    <string name="accountdel_success">Account removed successfully</string>
    <string name="accountdel_confirm">Do you want to remove this accunt?</string>
    <string name="accountedit_button">Edit Account</string>
    <string name="accountsave_button">Save Changes</string>
    <string name="accountsave_success">Account edited successfully</string>
    <string name="nosslwarning">Connections without SSL are not allowed</string>
    <string name="invalid_url">Endpoint URL must start with https://</string>
    <string name="explorer_test_button">File Explorer Test</string>
    <string name="unsupported_file">Unsupported file type</string>
    <string name="test_server_button">Connect to test server</string>
    <string name="media_conn_fail">Cannot retrieve remote file</string>
    <string name="media_wrong_type">Invalid media file</string>
    <string name="media_list_fail">Cannot connect to server</string>
    <string name="about_button">About this app</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>