<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Share">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiration_date"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayoutDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/Date"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="true"
            android:hint="@string/share_date"
            android:inputType="date"
            android:textColorHint="?attr/colorOnSecondary"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Month"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="true"
            android:hint="@string/share_month"
            android:inputType="date"
            android:textColorHint="?attr/colorOnSecondary"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Year"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="true"
            android:hint="@string/share_year"
            android:inputType="date"
            android:textColorHint="?attr/colorOnSecondary"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/expiration_time"
        android:textAlignment="center"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/Hour"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="true"
            android:hint="@string/share_hour"
            android:inputType="date"
            android:textColorHint="?attr/colorOnSecondary"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/Minute"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:focusable="true"
            android:hint="@string/share_minute"
            android:inputType="date"
            android:textColorHint="?attr/colorOnSecondary"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSubmit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <Button
            android:id="@+id/share"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/file_share"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/open_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/file_external"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

</LinearLayout>