<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Settings"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:id="@+id/linearLayoutSubmit"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expiration_date"
            android:textAlignment="center"
            android:textSize="25sp" />

        <Button
            android:id="@+id/saveprefs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/accountadd_button"
            tools:ignore="MissingConstraints"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/about_button"
            tools:ignore="MissingConstraints"
            style="?android:attr/buttonStyle" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>