<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/addaccount"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/accountadd_button" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accountselect"
                android:textAlignment="center"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/alist"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/account_list"
                tools:layout_editor_absoluteX="27dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>