<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateBucket">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/set_bucket_name"
                android:textAlignment="center"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/bname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:focusable="true"
                android:hint="@string/bucket_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColorHint="?attr/colorOnSecondary"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                android:padding="10dp"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="20dp">

                <Button
                    android:id="@+id/cbucket"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/create_bucket"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/simpleProgressBar"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:indeterminate="true"
                android:max="100"
                android:padding="20dp"
                android:progress="50"
                android:visibility="invisible"
                tools:ignore="MissingConstraints" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>